[gd_scene load_steps=2 format=3 uid="uid://celfwkx6jfqka"]

[ext_resource type="Script" uid="uid://bl4j3bd7ttjq2" path="res://Scripts/game_state.gd" id="1_v31h2"]

[node name="GameState" type="Node2D"]
script = ExtResource("1_v31h2")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 60.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
